--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,10 @@ on:
   push:
   schedule:
     - cron: '*/5 * * * *'
+  # workflow_dispatch: # manual trigger
 
   # Allows you to run this work flow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
   # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
