--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,9 @@ name: test
 on:
   # Triggers the worklow on push or pull request events but only for the main branch
   push:
-  schedule:
-    - cron: '*/2 * * * *'
-  # workflow_dispatch: # manual trigger
+  # schedule:
+  #   - cron: '*/2 * * * *'
+  workflow_dispatch: # manual trigger
 
   # Allows you to run this work flow manually from the Actions tab
   # workflow_dispatch:
