--- a/.github/workflows/api-build.yml
+++ b/.github/workflows/api-build.yml
@@ -3,17 +3,19 @@ name: api-build
 on:
     push:
         paths:
-            - ".github/workflows/api-build.yml"
-            - 'api/**'
+            -   ".github/workflows/api-build.yml"
+            -   'api/**'
     workflow_dispatch: # manual trigger
 
 jobs:
     build:
         name: build-dotnet-api
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-latest 
         steps:
             -   uses: actions/checkout@v4
             -   run: dotnet --list-runtimes
             -   run: dotnet --list-sdks
             -   run: dotnet build
+                working-directory: ./api
+            -   run: dotnet test
                 working-directory: ./api
