--- a/.github/workflows/upper-build.yml
+++ b/.github/workflows/upper-build.yml
@@ -12,4 +12,8 @@ jobs:
         name: build-upper-app
         runs-on: ubuntu-latest
         steps: 
+            -   run: go version
+            -   uses: actions/setup-go@v5
+                with:
+                    go-version: '1.22'
             - run: go version
