--- a/.github/workflows/upper-build.yml
+++ b/.github/workflows/upper-build.yml
@@ -11,7 +11,10 @@ jobs:
     build:
         name: build-upper-app
         runs-on: ubuntu-latest
-        steps: 
+        steps:
+            -   run: pwd && ls -al
+            -   uses: actions/checkout@v4
+            -   run: pwd && ls -al
             -   run: go version
             -   uses: actions/setup-go@v5
                 with:
