--- a/.github/workflows/upper-build.yml
+++ b/.github/workflows/upper-build.yml
@@ -20,3 +20,10 @@ jobs:
                 with:
                     go-version: '1.22'
             - run: go version
+            - run: |
+                ls
+                go build
+                ls
+                go test
+                ./upper foo the bar
+            working-directory: upper
