--- a/.github/workflows/gh.yml
+++ b/.github/workflows/gh.yml
@@ -10,6 +10,8 @@ jobs:
     cli:
         name: gh-cli-version
         runs-on: ubuntu-latest
+        env:
+            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         steps:
             -   run: env
             -   run: gh --version
