--- a/.github/workflows/butler.yml
+++ b/.github/workflows/butler.yml
@@ -11,10 +11,10 @@ jobs:
     chat: # The job name
         runs-on: ubuntu-latest
         steps:
-            -   uses: ca-dp/code-butler@v1
+            -   uses: google-github-actions/run-gemini-cli@v0.1.16
                 with:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                    OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+                    GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
                     cmd: chat
                     comment_body: ${{ github.event.comment.body }} # This extracts the content of the comment that was made
 
