Chat with GEMINI

--- a/.github/workflows/butler.yml
+++ b/.github/workflows/butler.yml
@@ -16,5 +16,5 @@ jobs:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                     GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
                     command: chat
-                    comment_body: ${{ github.event.comment.body }} # This extracts the content of the comment that was made
+                    prompt: "You are a helpful assistant. The user said: ${{ github.event.comment.body }}"
 
