--- a/.github/workflows/butler.yml
+++ b/.github/workflows/butler.yml
@@ -13,7 +13,8 @@ jobs:
     chat: # The job name
         runs-on: ubuntu-latest
         steps:
-            -   uses: google-github-actions/run-gemini-cli@v0.1.16
+            -   name: Run Gemini CLI
+                uses: google-github-actions/run-gemini-cli@v0.1.16
                 with:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                     GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
