--- a/.github/workflows/butler.yml
+++ b/.github/workflows/butler.yml
@@ -16,8 +16,8 @@ jobs:
             -   name: Run Gemini CLI
                 uses: google-github-actions/run-gemini-cli@v0.1.16
                 with:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                    GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+                    github_token: ${{ secrets.GITHUB_TOKEN }}
+                    gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
                     command: "chat"
                     prompt: "You are a helpful assistant. The user said: ${{ github.event.comment.body }}"
 
