Chat with GEMINI

--- a/.github/workflows/butler.yml
+++ b/.github/workflows/butler.yml
@@ -10,17 +10,22 @@ permissions:
     contents: read
 
 jobs:
-    chat: # The job name
+    chat:
         runs-on: ubuntu-latest
         steps:
-            -   name: Checkout repo
-                uses: actions/checkout@v4
-                
-            -   name: Run Gemini CLI
-                uses: google-github-actions/run-gemini-cli@v0.1.16
-                env:
-                    github_token: ${{ secrets.GITHUB_TOKEN }}
-                with:
-                    gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
-                    prompt: "You are a helpful assistant. The user said: ${{ github.event.comment.body }}"
+            - name: Checkout repo
+              uses: actions/checkout@v4
+
+            - name: Run Gemini CLI
+              id: gemini
+              uses: google-github-actions/run-gemini-cli@v0.1.16
+              env:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
+                  prompt: "You are a helpful assistant. The user said: ${{ github.event.comment.body }}"
+
+            - name: Show Gemini output
+              run: echo "${{ steps.gemini.outputs.output }}"
+                    
 
