--- a/.github/workflows/butler.yml
+++ b/.github/workflows/butler.yml
@@ -26,6 +26,6 @@ jobs:
                   prompt: "You are a helpful assistant. The user said: ${{ github.event.comment.body }}"
 
             - name: Show Gemini output
-              run: echo "${{ steps.gemini.summary }}"
+              run: echo "Hello ${{ steps.gemini.summary }}"
                     
 
