--- a/.github/workflows/butler-gemini.yml
+++ b/.github/workflows/butler-gemini.yml
@@ -3,6 +3,9 @@ name: Gemini Butler
 on:
     issue_comment:
         types: [created]
+    
+    pull_request_review_comment:
+        types: [created]
 
 permissions:
     pull-requests: write
@@ -32,6 +35,7 @@ jobs:
                     GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                     REPO: ${{ github.repository }}
+                    PR_OR_ISSUE_NUMBER: ${{ github.event.issue.number || github.event.pull_request.number }}
                     COMMENT_ID: ${{ github.event.comment.id }}
                     COMMENT_BODY: ${{ github.event.comment.body }}
                 run: |
