--- a/.github/workflows/butler-gemini.yml
+++ b/.github/workflows/butler-gemini.yml
@@ -38,5 +38,6 @@ jobs:
                     PR_OR_ISSUE_NUMBER: ${{ github.event.issue.number || github.event.pull_request.number }}
                     COMMENT_ID: ${{ github.event.comment.id }}
                     COMMENT_BODY: ${{ github.event.comment.body }}
+                    EVENT_NAME: ${{ github.event_name }}
                 run: |
                     python .github/scripts/python-scripts/gemini_butler.py
