--- a/.github/workflows/butler-gemini.yml
+++ b/.github/workflows/butler-gemini.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
     gemini-chat:
-        if: startsWith(github.event.comment.body, '/ask')
+        if: startsWith(github.event.comment.body, '/ask') || startsWith(github.event.comment.body, '/review')
         runs-on: ubuntu-latest
 
         steps:
